src/tests/snapshots/tera__tests__rendering__rendering_macros_ok@import_other_file.txt.snap
---
source: src/tests/rendering.rs
expression: "&out"
input_file: src/tests/rendering_inputs/success/macros/import_other_file.txt
---
Success!
