src/tests/snapshots/tera__tests__rendering__rendering_macros_ok@load_macro_in_child.txt.snap
---
source: src/tests/rendering.rs
expression: "&out"
input_file: src/tests/rendering_inputs/success/macros/load_macro_in_child.txt
---
1
