src/tests/snapshots/tera__tests__rendering__rendering_macros_ok@parent_inheritance.txt.snap
---
source: src/tests/rendering.rs
expression: "&out"
input_file: src/tests/rendering_inputs/success/macros/parent_inheritance.txt
---
Hello/Hello
