src/tests/snapshots/tera__tests__rendering__rendering_macros_ok@using_self.txt.snap
---
source: src/tests/rendering.rs
expression: "&out"
input_file: src/tests/rendering_inputs/success/macros/using_self.txt
---
Hello
