src/tests/snapshots/tera__tests__rendering__rendering_ok@conditions.txt.snap
---
source: src/tests/rendering.rs
expression: "&out"
input_file: src/tests/rendering_inputs/success/conditions.txt
---
false
true
0
