src/tests/snapshots/tera__tests__rendering__rendering_ok@escaping.txt.snap
---
source: src/tests/rendering.rs
expression: "&out"
input_file: src/tests/rendering_inputs/success/escaping.txt
---
&lt;p&gt;I should be escaped by default&lt;/p&gt;
