src/tests/snapshots/tera__tests__rendering__rendering_ok@filters.txt.snap
---
source: src/tests/rendering.rs
expression: "&out"
input_file: src/tests/rendering_inputs/success/filters.txt
---
&lt;html&gt;
<html>
B&amp;b
B&b
should not print
1
Default val
Default val
3
['abc', 'efgh', 'ijklm']
6
HTML
<html>
&lt;HTML&gt;
<HTML>
&lt;HTML&gt;
<HTML>
2
2
19
2.2
true
true
True
[3, 2, 1]
1
3
2
1, 2, 3
[2, 3]
[1]
[3]
[1, 2]
[1, 2, 3, 4]
['My review', 'My review']
[2015, 2015, 2016, 2017, 2018, , 2018]
[[0, 3, 6]]
[{paragraphs: ['A', 'B', 'C'], title: 'My review'}, {paragraphs: ['A', 'B', 'C'], title: 'My review'}]
{2015: [{id: 1, year: 2015}, {id: 2, year: 2015}], 2016: [{id: 3, year: 2016}], 2017: [{id: 4, year: 2017}], 2018: [{id: 5, year: 2018}, {id: 7, year: 2018}]}
