src/tests/snapshots/tera__tests__rendering__rendering_ok@ifs.txt.snap
---
source: src/tests/rendering.rs
expression: "&out"
input_file: src/tests/rendering_inputs/success/ifs.txt
---
age
no age
Bob
everything
Oops
