src/tests/snapshots/tera__tests__rendering__rendering_ok@literals.txt.snap
---
source: src/tests/rendering.rs
expression: "&out"
input_file: src/tests/rendering_inputs/success/literals.txt
---
Hello
5
0
32
5
50
false
true
false
1hello
hello10
true
2
2.1
2
1.9
10.5
10.605
4
4.2
10
false
